[package]
name = "jupiter-perpetuals-cpi"
version = "0.1.0"
edition = "2021"
description = "Anchor CPI client for the Jupiter Perpetuals program."
authors = ["Garrett Weber <garrettbenweber@gmail.com>"]
repository = "https://github.com/Garrett-Weber/jupiter-perpetuals-cpi"
license = "MIT"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = ">=0.26.0"